Enable user to upload their photo

--- a/app/views/photos/_photo.html.erb
+++ b/app/views/photos/_photo.html.erb
@@ -1,6 +1,6 @@
 <div style='display: flex; flex-direction: column; align-items: center'>
   <div style='flex: 0'>
-    <%= photo.title %>
+    <%= photo.filename %>
   </div>
-  <%= image_tag photo.url %>
+  <%= image_tag url_for photo %>
 </div>
