Adjust style a bit

--- a/app/views/photos/index.html.erb
+++ b/app/views/photos/index.html.erb
@@ -2,6 +2,8 @@
   <%= button_tag 'ログアウト' %>
 <%- end %>
 
+<h1>写真一覧</h1>
+
 <%= link_to '写真をアップロードする', new_photo_path %>
 
 <%= render 'photos/gallery', photos: @photos %>
