--- a/app/views/photos/_gallery.html.erb
+++ b/app/views/photos/_gallery.html.erb
@@ -1,5 +1,5 @@
 <% if photos&.size&.>(0) %>
-  <div style='display: flex'>
+  <div style='display: flex; flex-wrap: wrap'>
     <%= render partial: 'photos/photo', collection: photos %>
   </div>
 <% else %>
