--- a/app/views/photos/_photo.html.erb
+++ b/app/views/photos/_photo.html.erb
@@ -2,5 +2,7 @@
   <div style='flex: 0'>
     <%= photo.filename %>
   </div>
-  <%= image_tag url_for photo %>
+  <div style="width: 200px; height: 200px; border: #ddd solid 3px">
+    <img src="<%= url_for(photo) %>" style='width: 100%; height: 100%; object-fit: contain' />
+  </div>
 </div>
