--- a/app/views/photos/_photo.html.erb
+++ b/app/views/photos/_photo.html.erb
@@ -5,4 +5,11 @@
   <div style="width: 200px; height: 200px; border: #ddd solid 3px">
     <img src="<%= url_for(photo) %>" style='width: 100%; height: 100%; object-fit: contain' />
   </div>
+  <% if session[:my_tweet_app_token].present? %>
+    <div>
+      <%= button_to photo_tweet_path(photo.id), method: :post do %>
+        ツイートする
+      <%- end %>
+    </div>
+  <%- end %>
 </div>
